--- a/styles/main.css
+++ b/styles/main.css
@@ -21,12 +21,11 @@ ol > li ol > li {
   color: rgb(249, 250, 251);
   background-size: 910px;
   background-repeat: no-repeat;
-  background-position: top right;
+  background-position: top right 25%;
   background-image: url(../src/background.webp);
   background-attachment: fixed;
   margin: 0 auto;
   justify-content: center;
-  margin-top: 5rem;
   padding: 0 5rem;
   margin-bottom: 10rem;
   display: flex;
@@ -36,6 +35,10 @@ ol > li ol > li {
 aside {
   position: fixed;
   left: 5%;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 40rem;
+  padding-top: 5rem;
 }
 
 #navigation {
@@ -49,14 +52,47 @@ aside {
   width: 175px;
 }
 
+#logo_text {
+  color: rgb(248, 24, 99);
+  font-size: 5rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  cursor: pointer;
+}
+
 .biography {
   font-weight: 500;
   font-size: 16px;
   width: 30rem;
   padding: 2rem 0;
+  text-align: center;
 }
 .biography span {
   color: rgb(248, 24, 99);
+}
+
+#socials {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 1rem;
+}
+#socials a {
+  text-decoration: none;
+  color: rgb(249, 250, 251);
+  background-color: rgb(248, 24, 99);
+  font-weight: 600;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: small;
+  margin: 3px;
+  transition: 0.5s;
+  width: 100%;
+  border-bottom: 3px solid rgba(0, 0, 0, 0);
+}
+#socials a:hover {
+  border-bottom: 3px solid rgb(24, 221, 255);
+  transition: 0.5s;
 }
 
 .menu_item {
@@ -80,6 +116,12 @@ aside {
   transition: 0.3s;
 }
 
+.active_button {
+  background-color: rgb(24, 221, 255);
+  color: rgb(33, 24, 60);
+  opacity: 0.3;
+}
+
 footer {
   font-size: 12px;
   font-weight: 500;
@@ -99,13 +141,14 @@ footer a:hover {
 }
 
 section {
+  margin: 5rem 0;
   position: absolute;
   align-self: flex-start;
   width: 60rem;
   background-color: rgba(30, 30, 30, 0.9);
   border: 2px solid rgb(24, 221, 255);
   border-radius: 8px 8px 0 0;
-  margin-left: 30rem;
+  margin-left: 40rem;
 }
 
 .article_title {
@@ -123,6 +166,7 @@ section {
   font-size: 14px;
   text-align: justify;
   text-justify: inter-word;
+  margin-bottom: 5rem;
 }
 .article_content a {
   color: rgb(24, 221, 255);
@@ -138,4 +182,37 @@ section {
 }
 .article_content strong {
   color: rgb(24, 221, 255);
+}
+
+.social_link {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.article_socials {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 1rem;
+}
+.article_socials img {
+  min-width: 140px;
+}
+.article_socials li {
+  list-style: none;
+}
+.article_socials li a {
+  text-decoration: none;
+  display: block;
+  color: rgb(249, 250, 251);
+  text-transform: uppercase;
+  background-color: rgb(248, 24, 99);
+  padding: 1rem 3rem;
+  border-radius: 0.2rem;
+}
+
+.com_info {
+  margin-left: 2rem;
+  padding-bottom: 1rem;
 }/*# sourceMappingURL=main.css.map */
