--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,6 +8,7 @@ $highlight: rgba(248, 24, 99, 1);
 $hover: rgba(24, 221, 255, 1);
 $text: rgba(249, 250, 251, 1);
 $texthover: rgba(33, 24, 60, 1);
+$sidesize: 40rem;
 
 /*  Styles */
 
@@ -31,12 +32,11 @@ ol > li ol > li {
 	color: $text;
 	background-size: 910px;
 	background-repeat: no-repeat;
-	background-position: top right;
+	background-position: top right 25%;
 	background-image: url(../src/background.webp);
 	background-attachment: fixed;
 	margin: 0 auto;
 	justify-content: center;
-	margin-top: 5rem;
 	padding: 0 5rem;
 	margin-bottom: 10rem;
 	display: flex;
@@ -46,6 +46,10 @@ ol > li ol > li {
 aside {
 	position: fixed;
 	left: 5%;
+	background-color: rgba(0, 0, 0, 0.2);
+	height: 100%;
+	width: $sidesize;
+	padding-top: 5rem;
 }
 
 #navigation {
@@ -59,14 +63,47 @@ aside {
 	width: 175px;
 }
 
+#logo_text {
+	color: $highlight;
+	font-size: 5rem;
+	user-select: none;
+	cursor: pointer;
+}
+
 .biography {
 	font-weight: 500;
 	font-size: 16px;
 	width: 30rem;
 	padding: 2rem 0;
+	text-align: center;
 
 	span {
 		color: $highlight;
+	}
+}
+
+#socials {
+	display: flex;
+	justify-content: space-around;
+	padding-bottom: 1rem;
+
+	a {
+		text-decoration: none;
+		color: $text;
+		background-color: $highlight;
+		font-weight: 600;
+		padding: 0.5rem;
+		border-radius: 4px;
+		font-size: small;
+		margin: 3px;
+		transition: 0.5s;
+		width: 100%;
+		border-bottom: 3px solid #00000000;
+
+		&:hover {
+			border-bottom: 3px solid $hover;
+			transition: 0.5s;
+		}
 	}
 }
 
@@ -93,6 +130,12 @@ aside {
 	}
 }
 
+.active_button {
+	background-color: $hover;
+	color: $texthover;
+	opacity: 0.3;
+}
+
 footer {
 	font-size: 12px;
 	font-weight: 500;
@@ -115,6 +158,7 @@ footer {
 }
 
 section {
+	margin: 5rem 0;
 	position: absolute;
 	align-self: flex-start;
 	width: 60rem;
@@ -122,7 +166,7 @@ section {
 	border: 2px solid $hover;
 	border-radius: 8px 8px 0 0;
 
-	margin-left: 30rem;
+	margin-left: $sidesize;
 }
 
 .article_title {
@@ -140,6 +184,7 @@ section {
 	font-size: 14px;
 	text-align: justify;
 	text-justify: inter-word;
+	margin-bottom: 5rem;
 
 	a {
 		color: $hover;
@@ -158,4 +203,40 @@ section {
 	strong {
 		color: $hover;
 	}
+}
+
+.social_link {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 100%;
+}
+
+.article_socials {
+	display: flex;
+	justify-content: space-evenly;
+	padding-bottom: 1rem;
+
+	img {
+		min-width: 140px;
+	}
+
+	li {
+		list-style: none;
+
+		a {
+			text-decoration: none;
+			display: block;
+			color: $text;
+			text-transform: uppercase;
+			background-color: $highlight;
+			padding: 1rem 3rem;
+			border-radius: 0.2rem;
+		}
+	}
+}
+
+.com_info {
+	margin-left: 2rem;
+	padding-bottom: 1rem;
 }
